//
// Copyright 2016, TeamDev Ltd. All rights reserved.
//
// Redistribution and use in source and/or binary forms, with or without
// modification, must retain the above copyright notice and the following
// disclaimer.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
//
syntax = "proto3";

package spine.base;

option java_package = "org.spine3.base";
option java_outer_classname = "CommandProto";
option java_multiple_files = true;
option java_generate_equals_and_hash = true;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

import "spine/base/user_id.proto";
import "spine/time/time.proto";
import "spine/base/namespace.proto";

// Command identifier.
message CommandId {
    string uuid = 1;
}

// `Command` is an instruction to do something.
//
// A command consists of two parts: command message and command context.
message Command {
    // This field contains a domain model part of the command.
    //
    // The type of the message enclosed into `Any` defines the type of the command.
    // When we speak about a 'command' as a type, we refer to the message enclosed in this field.
    //
    // There should be one and only one command handler, which is associated with the type of the command.
    //
    // The message can hold any valid Protobuf message, but in most cases, it would be a type
    // defined in `commands.proto` file of the corresponding aggregate or process manager.
    google.protobuf.Any message = 1;

    // Context information common for all commands.
    spine.base.CommandContext context = 2;
}

// Meta-information about the command and the environment, which generated the command.
message CommandContext {
    // The id of the command.
    CommandId command_id = 1;

    // The user who created the command.
    UserId actor = 2;

    // Date/time at which the command was created.
    google.protobuf.Timestamp timestamp = 3;

    // The zone offset from which the command is made.
    time.ZoneOffset zone_offset = 4;

    // The `namespace` attribute must be defined for commands in multitenant applications.
    Namespace namespace = 5;
}

// Enumeration of possible failures when validating a command.
enum CommandValidationError {
    // Reserved value.
    UNKNOWN = 0;

    // The command type is not supported by the server.
    UNSUPPORTED_COMMAND = 1;

    // The command is supported but not all required fields are populated.
    INCOMPLETE_COMMAND = 2;

    // The command context does not have `namespace` attribute defined in a multitenant application.
    NAMESPACE_UNKNOWN = 3;
}
